[gd_scene load_steps=2 format=3 uid="uid://c7hrhunviq03i"]

[ext_resource type="Script" path="res://plugins/macroboard/src/buttons/macro_action_button.gd" id="1_bokui"]

[node name="MacroActionButton" type="Button"]
custom_minimum_size = Vector2(150, 150)
offset_right = 12.0
offset_bottom = 20.0
text_overrun_behavior = 1
script = ExtResource("1_bokui")

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 35.0
offset_top = 20.0
offset_right = -35.0
offset_bottom = -50.0
expand_mode = 1
stretch_mode = 5

[node name="AppName" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.1
anchor_top = 0.75
anchor_right = 0.9
anchor_bottom = 0.92
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[connection signal="pressed" from="." to="." method="_on_pressed"]
